@@ -287,11 +287,16 @@ as argument for another typespec."
 
 ;;;; Optimize `typep` form
 
-(defparameter *typep-optimizer-table* (make-hash-table))
+(defparameter *typep-optimizer-alist* nil)
 
-(defmacro define-typep-optimizer (name (&rest args) &body body)
-  `(setf (gethash ',name *typep-optimizer-table*)
-         (lambda (,@args) (block ,name ,@body))))
+(defmacro define-typep-optimizer (key (&rest args) &body body)
+  `(setf *typep-optimizer-alist*
+         (acons ',key (lambda (,@args) (block ,key ,@body))
+                (delete ',key *typep-optimizer-alist* :key #'car))))
+
+(defun find-typep-optimizer (key)
+  (cdr (assoc key *typep-optimizer-alist*)))
+
 
 ;;; typespecs defined via `defpred` in lisp/typespec.l has their predicate
 ;;; function, but can be transformed into more straightforward form.
@@ -464,7 +469,7 @@ as argument for another typespec."
                             &aux (*this-typespec* (or *this-typespec* typespec)))
   (multiple-value-bind (type args) (split-typespec typespec)
     (acond
-      ((gethash type *typep-optimizer-table*)
+      ((find-typep-optimizer type)
        (apply it object-form args))
       ((get type 'si::type-predicate)
        `(,it ,object-form))
